// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CARD AddItem component renders correctly 1`] = `
<div>
  <button
    className="ant-btn ant-btn-text ant-btn-block"
    onClick={[Function]}
    type="button"
  >
    <span
      aria-label="plus-circle"
      className="anticon anticon-plus-circle"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="plus-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M696 480H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8z"
        />
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
      </svg>
    </span>
    <span>
      Add card
    </span>
  </button>
</div>
`;

exports[`TASK AddItem component renders correctly 1`] = `
<div>
  <button
    className="ant-btn ant-btn-text ant-btn-block"
    onClick={[Function]}
    type="button"
  >
    <span
      aria-label="plus-circle"
      className="anticon anticon-plus-circle"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="plus-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M696 480H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8z"
        />
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
      </svg>
    </span>
    <span>
      Add task
    </span>
  </button>
</div>
`;
